crates/reddb-server/tests/snapshots/subquery_snapshots__subq_not_in_subquery.snap
---
source: crates/reddb-server/tests/subquery_snapshots.rs
expression: "fmt_parse_error(\"SELECT * FROM t WHERE id NOT IN (SELECT id FROM u)\")"
---
UNEXPECTED OK
input: "SELECT * FROM t WHERE id NOT IN (SELECT id FROM u)"
