crates/reddb-server/tests/snapshots/subquery_snapshots__subq_scalar_eq_unterminated.snap
---
source: crates/reddb-server/tests/subquery_snapshots.rs
expression: "fmt_parse_error(\"SELECT * FROM t WHERE x = (SELECT\")"
---
input: "SELECT * FROM t WHERE x = (SELECT"
kind:  Syntax
error: Parse error at 1:34: Unexpected token: EOF (expected: identifier or field name)
