crates/reddb-server/tests/snapshots/subquery_snapshots__subq_scalar_lt_subquery.snap
---
source: crates/reddb-server/tests/subquery_snapshots.rs
expression: "fmt_parse_error(\"SELECT * FROM t WHERE x < (SELECT MAX(y) FROM u)\")"
---
input: "SELECT * FROM t WHERE x < (SELECT MAX(y) FROM u)"
kind:  Syntax
error: Parse error at 1:35: Unexpected token: MAX (expected: ))
